# totp-uefi

./: .gitignore  Cargo.toml  README.md  build.bat
.cargo/: x86_64-none-efi.json
base32-0.4.0/: Cargo.toml
base32-0.4.0/src/: lib.rs
base32-1.0.0-patch-nostd-pc/: Cargo.toml  Cargo.toml.orig
crypto-common-1.0.0-patch-nostd-pc/: Cargo.toml
sha1-0.10.6/: Cargo.toml
sha1-0.10.6/src/: compress.rs
sha1-1.0.0-patch-nostd-pc/: Cargo.toml
sha2-0.10.8/src/: sha256.rs  sha512.rs
sha2-1.0.0-patch-nostd-pc/: Cargo.toml
src/: main.rs
totp-rs-5.3.0/: Cargo.toml
totp-rs-5.3.0/src/: rfc.rs
totp-rs-6.0.0-patch-nostd-pc/: .cargo_vcs_info.json  Cargo.toml  README.md
totp-rs-6.0.0-patch-nostd-pc/src/: lib.rs  secret.rs  url_error.rs
