[package]
name = "mov-uefi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.16.0", features = ["exts"] }
uefi-services = "0.13.0"

# uefi = { git = "https://github.com/rust-osdev/uefi-rs", tag = "uefi-v0.16.0", version = "0.16.0" }
# uefi-services = { git = "https://github.com/rust-osdev/uefi-rs", tag = "uefi-services-v0.13.0", version = "0.13.0" }

# [patch.crates-io]
# log = {git = "https://github.com/rust-lang/log", tag = "0.4.17", version = "0.4.17"}
# cfg-if = {git = "https://github.com/alexcrichton/cfg-if", tag = "1.0.0", version = "1.0.0"}
# bit_field = {git = "https://github.com/phil-opp/rust-bit-field", tag = "v0.10.1", version = "0.10.1"}
# bitflags = {git = "https://github.com/bitflags/bitflags", tag = "1.3.2", version = "1.3.2"}
# proc-macro2 = {git = "https://github.com/dtolnay/proc-macro2", tag = "1.0.39", version = "1.0.39"}
# syn = {git = "https://github.com/dtolnay/syn", tag = "1.0.95", version = "1.0.95"}
# quote = {git = "https://github.com/dtolnay/quote", tag = "1.0.18", version = "1.0.18"}
# unicode-xid = {git = "https://github.com/unicode-rs/unicode-xid", rev = "5d8742b", version = "0.2.3"}
# ucs2 = {git = "https://github.com/GabrielMajeri/ucs2-rs", rev = "ad816f4", version = "0.3.2"}
# uefi-macros = {git = "https://github.com/rust-osdev/uefi-rs", tag = "uefi-macros-v0.7.0", package = "uefi-macros", version = "0.7.0"}
